updated vendor name to use on packagist.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
+2021-09-27 Ephraim Härer <ephraim.haerer@renolit.com>
+	* Preparation for new release on packagist and typo3.org
+
+
 2020-08-06 Achim Fritz <achim.fritz@b13.com>
 	* compatibility with TYPO3 10
+
 
 2018-02-16 Achim Fritz <af@lightwerk.com>
 	* Preparation for 8.7 LTS
